--- a/.inputrc
+++ b/.inputrc
@@ -9,10 +9,8 @@ set mark-symlinked-directories on
 
 # Use the text that has already been typed as the prefix for searching through
 # commands (i.e. more intelligent Up/Down behavior)
-if [ $UID != '0' ]; then
-	"\e[B": history-search-forward
-	"\e[A": history-search-backward
-fi
+# "\e[B": history-search-forward
+# "\e[A": history-search-backward
 
 # Do not autocomplete hidden files unless the pattern explicitly begins with a dot
 set match-hidden-files off
@@ -42,6 +40,4 @@ set output-meta on
 set convert-meta off
 
 # Use Alt/Meta + Delete to delete the preceding word
-if [ $UID != '0' ]; then
-	"\e[3;3~": kill-word
-fi
+# "\e[3;3~": kill-word
