--- a/.gitconfig
+++ b/.gitconfig
@@ -6,11 +6,11 @@
 [color]
 	ui = always
 [apply]
-	whitespace = fix
+	whitespace = input
 [core]
 	excludesfile = ~/.gitignore
 	attributesfile = ~/.gitattributes
-	whitespace = fix,space-before-tab,tab-in-indent,trailing-space
+	whitespace = -fix,-space-before-tab,-tab-in-indent,-trailing-space
 [color "branch"]
 	current = yellow reverse
 	local = yellow
@@ -38,3 +38,16 @@
 	pushInsteadOf = "git://gist.github.com/"
 [url "git://gist.github.com/"]
 	insteadOf = "gist:"
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+[filter "media"]
+	required = true
+	clean = git media clean %f
+	smudge = git media smudge %f
+[user]
+	name = Kamil Dzieliński
+	email = brego.dk+d428c@gmail.com
