feat(git): Add commit tepmplate
Why:

 - Comit messages can be more uniform and informative

This change addresses the need by:

 - Added a template stolen from [Matt Sumner][]

[Matt Sumner]: https://robots.thoughtbot.com/better-commit-messages-with-a-gitmessage-template

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
 	attributesfile = ~/.gitattributes
 [alias]
 	a      = add
+	aa     = add .
 	ap     = add -p
 	b      = branch
 	c      = commit
@@ -23,6 +24,8 @@
 	s      = status -s
 	up     = pull
 	fuckit = reset --hard HEAD
+[commit]
+	template = ~/.gitmessage
 [pull]
 	ff     = only
 	rebase = true
