Add & modify aliases
 - Modified diff and diff staged
 - Modified pretty format of log
 - Added undo-push

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = Kamil Dzieliński
+	name  = Kamil Dzieliński
 	email = brego.dk+d428c@gmail.com
 [core]
 	excludesfile   = ~/.gitignore
@@ -13,10 +13,10 @@
 	cm          = commit -m
 	co          = checkout
 	cb          = checkout -b
-	d           = diff
-	ds          = diff --staged
+	d           = diff --color --color-words --abbrev
+	ds          = diff --color --color-words --abbrev --staged
 	f           = fetch
-	h           = log --pretty=format:'%C(yellow)%h%Creset %cd | %s%C(yellow)%d%Creset %C(red)(%an, %cr)%Creset' --graph --date=short
+	h           = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
 	l           = log --name-status
 	log         = log --topo-order
 	m           = merge
@@ -26,6 +26,7 @@
 	fuckit      = reset --hard HEAD
 	unstage     = reset HEAD
 	undo-commit = reset --soft HEAD^
+	undo-push   = push -f origin HEAD^:master
 [commit]
 	template = ~/.gitmessage
 [pull]
