--- a/.inputrc
+++ b/.inputrc
@@ -13,8 +13,11 @@ set mark-symlinked-directories on
 "\e[A": history-search-backward
 
 # ctrl left, ctrl right for moving on the readline by word
-"\e[1;5C": forward-word
-"\e[1;5D": backward-word
+#"\e[1;5C": forward-word
+#"\e[1;5D": backward-word
+# alt left, alt right for moving on the readline by word
+"\e\e[C": forward-word
+"\e\e[D": backward-word
 
 # Do not autocomplete hidden files unless the pattern explicitly begins with a dot
 set match-hidden-files off
