--- a/setup/com.googlecode.iterm2.plist
+++ b/setup/com.googlecode.iterm2.plist
@@ -242,7 +242,7 @@
 		</dict>
 	</dict>
 	<key>Default Bookmark Guid</key>
-	<string>E5D74718-BA35-4CE8-AAE9-836052FA3119</string>
+	<string>4AC6C60E-A8DA-4A8B-8465-4B8FCF7737B1</string>
 	<key>DimBackgroundWindows</key>
 	<false/>
 	<key>DimInactiveSplitPanes</key>
@@ -436,11 +436,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>984 299 445 207 0 0 2304 1273 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>147 618 606 456 0 0 2304 1273 </string>
+	<string>55 365 606 456 0 0 1440 877 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>842 661 620 392 0 0 2304 1273 </string>
+	<string>842 442 620 392 0 0 2304 1273 </string>
+	<key>NSWindow Frame SharedPreferences</key>
+	<string>288 196 796 473 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1 11 1438 860 0 0 1440 877 </string>
+	<string>1 394 570 473 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>1152 4 1152 1269 0 0 2304 1273 </string>
 	<key>New Bookmarks</key>
@@ -632,6 +634,8 @@
 				<key>Red Component</key>
 				<real>0.70913255214691162</real>
 			</dict>
+			<key>Bound Hosts</key>
+			<array/>
 			<key>Character Encoding</key>
 			<integer>4</integer>
 			<key>Close Sessions On End</key>
@@ -684,7 +688,7 @@
 				<real>0.61000990867614746</real>
 			</dict>
 			<key>Guid</key>
-			<string>E5D74718-BA35-4CE8-AAE9-836052FA3119</string>
+			<string>4AC6C60E-A8DA-4A8B-8465-4B8FCF7737B1</string>
 			<key>Hide After Opening</key>
 			<false/>
 			<key>Horizontal Spacing</key>
@@ -1004,7 +1008,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Brego v1</string>
+			<string>Brego v1.1</string>
 			<key>Non Ascii Font</key>
 			<string>Monaco 12</string>
 			<key>Non-ASCII Anti Aliased</key>
@@ -1193,6 +1197,10 @@
 	<string>9FD5820C-4199-4D0E-8D03-18980E178AEE</string>
 	<key>NoSyncNeverRemindPrefsChangesCopy</key>
 	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>0</integer>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
@@ -1265,7 +1273,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-07-06T09:32:18Z</date>
+	<date>2016-10-06T08:31:45Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1311,6 +1319,8 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.4</string>
+	<string>3.0.10</string>
+	<key>moveToApplicationsFolderAlertSuppress</key>
+	<true/>
 </dict>
 </plist>
