--- a/.gitconfig
+++ b/.gitconfig
@@ -74,7 +74,7 @@
     pushInsteadOf = "git://gist.github.com/"
 [url "git://gist.github.com/"]
     insteadOf = "gist:"
-[filter "lfs"]¬
+[filter "lfs"]
     clean = git-lfs clean -- %f
     smudge = git-lfs smudge -- %f
     process = git-lfs filter-process
