--- a/.gitconfig
+++ b/.gitconfig
@@ -5,37 +5,44 @@
     excludesfile   = ~/.gitignore
     attributesfile = ~/.gitattributes
 [alias]
-    a           = add
-    aa          = add .
-    ap          = add -p
-    b           = branch
-    c           = commit
-    cm          = commit -m
-    co          = checkout
-    cb          = checkout -b
-    d           = diff --color --color-words --abbrev
-    ds          = diff --color --color-words --abbrev --staged
-    f           = fetch
-    h           = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-    l           = log --name-status
-    log         = log --topo-order
-    m           = merge
-    r           = rebase
-    s           = status -s
-    up          = pull
-    fuckit      = reset --hard HEAD
-    unstage     = reset HEAD
-    undo-commit = reset --soft HEAD^
-    undo-push   = push -f origin HEAD^:master
+    a               = add
+    aa              = add .
+    ap              = add -p
+    b               = branch
+    c               = commit
+    cm              = commit -m
+    co              = checkout
+    cb              = checkout -b
+    d               = diff --color --color-words --abbrev
+    ds              = diff --color --color-words --abbrev --staged
+    f               = fetch
+    h               = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    l               = log --name-status
+    log             = log --topo-order
+    m               = merge
+    r               = rebase
+    s               = status -s
+    up              = pull
+    fuckit          = reset --hard HEAD
+    unstage         = reset HEAD
+    undo-commit     = reset --soft HEAD^
+    undo-push       = push -f origin HEAD^:master
+    branch-cleanup  = "!git branch --no-color --merged | grep -v '\\*' | grep -vE 'master|production|staging|release' | xargs -n 1 git branch -d"
+    branch-refresh  = "remote update origin --prune"
+	update-branches = "!git co release; git up; git co master; git up; git m release; git push; git b --no-color --no-merged | while read a; do git co $a; git up; git m master; git push; done;"
+
+
 # Alias below is built by Kim Rose based on the following:
 # http://stackoverflow.com/a/4969679/954798
 #
 # It copies branch-1 contents to branch-2 without merging, whilie keeping the
 # branch-2 history.
     merge-theirs = !git merge --no-edit -s ours "$1" && git branch branchTEMP && git reset --hard "$1" && git reset --soft branchTEMP && git commit --amend && git branch -D branchTEMP && git diff HEAD "$1"
-    branch-cleanup = "!git branch --no-color --merged | grep -v '\\*' | grep -vE 'master|production|staging|release' | xargs -n 1 git branch -d"
-    branch-refresh = "remote update origin --prune"
-	update-branches = "!git co release; git up; git co master; git up; git m release; git push; git b --no-color --no-merged | while read a; do git co $a; git up; git m master; git push; done;"
+
+# Use this to rename files when changing case only (usefull on Mac).
+#
+# Thanks to https://stackoverflow.com/a/20907647/954798
+    rename = mv -f
 [commit]
     template = ~/.gitmessage
 [pull]
