--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,29 @@
 [user]
     name  = Kamil Dzieliński
     email = brego.dk+d428c@gmail.com
+
 [core]
     excludesfile   = ~/.gitignore
     attributesfile = ~/.gitattributes
+    hooksPath      = .githooks
+    ignoreCase     = false
+    pager          = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    max-line-length = 700
+    syntax-theme    = Solarized (dark)
+    navigate        = true  # use n and N to move between diff sections
+    light           = false # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+    hyperlinks      = true
+    line-numbers    = true
+#    file-style                    = bold yellow ul
+#    file-decoration-style         = yellow ol ul
+#    hunk-header-decoration-style  = blue
+#    hunk-header-line-number-style = purple bold
+
 [alias]
     a               = add
     aa              = add .
@@ -29,8 +49,6 @@
     undo-push       = push -f origin HEAD^:master
     branch-cleanup  = "!git branch --no-color --merged | grep -v '\\*' | grep -vE 'master|production|staging|release' | xargs -n 1 git branch -d"
     branch-refresh  = "remote update origin --prune"
-	update-branches = "!git co release; git up; git co master; git up; git m release; git push; git b --no-color --no-merged | while read a; do git co $a; git up; git m master; git push; done;"
-
 
 # Alias below is built by Kim Rose based on the following:
 # http://stackoverflow.com/a/4969679/954798
@@ -43,44 +61,74 @@
 #
 # Thanks to https://stackoverflow.com/a/20907647/954798
     rename = mv -f
+
 [commit]
     template = ~/.gitmessage
+
+[help]
+    autocorrect = 1
+
 [pull]
-    ff     = only
-    rebase = true
+    default = current
+    ff      = only
+    rebase  = true
+
+# push easily. http://stackoverflow.com/a/23918418/89484
 [push]
-    default = simple
+    default         = current
+    followTags      = true
+    autoSetupRemote = true
+
 [rerere]
     enabled = true
+
 [color]
-    ui = always
+    ui = auto
+
 [color "branch"]
     current = yellow reverse
     local   = yellow
     remote  = green
+
 [color "diff"]
-    meta = yellow bold
-    frag = magenta bold
-    old  = red bold
-    new  = green bold
+    meta                = yellow bold
+    frag                = magenta bold
+    old                 = red bold
+    new                 = green bold
+    whitespace          = red reverse
+    newMoved            = cyan dim
+    oldMoved            = blue dim
+    newMovedAlternative = cyan italic
+    oldMovedAlternative = blue italic
+
 [color "status"]
     added     = yellow
     changed   = green
     untracked = cyan
+
 [merge]
-    log = true
+    log           = true
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
+
 [url "git@github.com:"]
     insteadOf     = "gh:"
     pushInsteadOf = "github:"
     pushInsteadOf = "git://github.com/"
+
 [url "git://github.com/"]
     insteadOf = "github:"
+
 [url "git@gist.github.com:"]
     insteadOf     = "gst:"
     pushInsteadOf = "gist:"
     pushInsteadOf = "git://gist.github.com/"
+
 [url "git://gist.github.com/"]
     insteadOf = "gist:"
+
 [filter "lfs"]
     clean = git-lfs clean -- %f
     smudge = git-lfs smudge -- %f
